--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "gulp": "^3.9.1",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "react": "^0.14.7",
+    "serve-favicon": "~2.2.1",
+    "socket.io": "^1.4.5"
   }
 }
