--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.12.4",
     "gulp": "^3.9.1",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
     "react": "^0.14.7",
     "serve-favicon": "~2.2.1",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "twitter": "^1.2.5"
   }
 }
