--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
     "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "serve-favicon": "~2.2.1",
     "socket.io": "^1.4.5",
     "twitter": "^1.2.5"
+  },
+  "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "webpack": "^1.12.12"
   }
 }
