--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "babel": "^6.5.2",
     "babelify": "^7.2.0",
+    "babel-plugin-transform-react-jsx": "^6.5.2",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -25,6 +26,8 @@
   "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "webpack": "^1.12.12"
   }
 }
