--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "dependencies": {
     "babel": "^6.5.2",
-    "babelify": "^7.2.0",
     "babel-plugin-transform-react-jsx": "^6.5.2",
+    "babelify": "^7.2.0",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -16,6 +16,7 @@
     "express": "~4.12.4",
     "gulp": "^3.9.1",
     "jade": "~1.9.2",
+    "lodash": "^4.5.0",
     "morgan": "~1.5.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
